--- a/HelloAndroid/AndroidManifest.xml
+++ b/HelloAndroid/AndroidManifest.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.github.taru0216.helloworld"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="7" />
+<manifest
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  package="com.github.taru0216.helloworld"
+  android:versionCode="1"
+  android:versionName="1.0">
+  <uses-sdk
+    android:minSdkVersion="7" />
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".HelloAndroid"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-    </application>
+  <!-- used by wifi.HelloWifi -->
+  <uses-permission
+    android:name="android.permission.ACCESS_WIFI_STATE" />
+    
+  <application
+    android:icon="@drawable/icon"
+    android:label="@string/app_name">
+    <activity
+      android:name=".HelloAndroid"
+      android:label="@string/app_name">
+      <intent-filter>
+        <action
+          android:name="android.intent.action.MAIN" />
+        <category
+          android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+    <activity
+      android:name=".wifi.HelloWifi" />
+  </application>
 </manifest>
